--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "typescript": "^4.9.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
-    "i18next": "^25.3.0",
+    "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.525.0",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
-    "react-i18next": "^15.5.3",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
