--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
+    "axios": "^1.10.0",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
     "i18next": "^23.15.1",
